--- a/jokedisplay/src/main/res/values/strings.xml
+++ b/jokedisplay/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">jokedisplay</string>
+    <string name="joke_display_title">Joke Activity</string>
 </resources>
