--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="button_text">Tell A Joke</string>
     <string name="action_explain">Explain the Nazi Joke</string>
     <string name="bar_explained">BAR: M1918A2 Browning Automatic Rifle</string>
-    <string name="progress_message">Loading...</string>
+    <string name="progress_title">Loading...</string>
+    <string name="progress_message">Please Wait...</string>
+
 </resources>
